# Reversi

./: Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  ConsoleDisplay.cpp  ConsoleDisplay.h  Game.cpp  HumanPlayer.h  Player.h  StdLogic.cpp  StdLogic.h  gitLog.txt  info.txt  main.cpp  makefile
etc/: gitLog.txt  info.txt
exe/: net_config.txt  server_config.txt
include/: Cell.h  CompPlayer.h  ConsoleDisplay.h  Display.h  Game.h  Menu.h  StdLogic.h
src/: Board.cpp  Board.h  Cell.cpp  Cell.h  CompPlayer.cpp  CompPlayer.h  ConsoleDisplay.cpp  ConsoleMenu.cpp  Display.h  Game.cpp  Game.h  Globals.h  HumanPlayer.cpp  HumanPlayer.h  Logic.h  Player.h  StdLogic.cpp  StdLogic.h
src/client/: main.cpp  makefile
src/client/include/: Board.h  Client.h  CompPlayer.h  ConsoleDisplay.h  ConsoleMenu.h  Display.h  Game.h  Globals.h  HumanPlayer.h  LocalPlayer.h  Logic.h  Menu.h  NetworkParser.h  NetworkPlayer.h  Player.h  StdLogic.h
src/client/lib/googletest-release-1.8.0/googlemock/scripts/generator/cpp/: ast.py
src/client/src/: Cell.cpp  Client.cpp  CompPlayer.cpp  ConsoleDisplay.cpp  ConsoleMenu.cpp  Game.cpp  HumanPlayer.cpp  LocalPlayer.cpp  NetworkParser.cpp  NetworkPlayer.cpp
src/client/tests/: Board_test.cpp  Board_test.h  Cell_test.cpp  CompPlayer_test.cpp  CompPlayer_test.h  StdLogic_test.cpp
src/server/: Server.cpp  Server.h  main.cpp  makefile
src/server/include/: Command.h  CommandsManager.h  GameLobbies.h  GameLobby.cpp  GameLobby.h  GameManager.h  JoinGameCommand.h  ListGamesCommand.h  PlayCommand.h  ReversiHandler.h  Server.h  StartCommand.h  Task.h  ThreadPool.cpp  ThreadPool.h
src/server/src/: CommandsManager.cpp  GameLobbies.cpp  GameLobby.cpp  GameManager.cpp  JoinGameCommand.cpp  ListGamesCommand.cpp  PlayCommand.cpp  ReversiHandler.cpp  Server.cpp  StartCommand.cpp  ThreadPool.cpp
tests/: Board_test.cpp  Board_test.h  Cell_test.cpp  CompPlayer_test.cpp  CompPlayer_test.h  StdLogic_test.cpp  StdLogic_test.h  main_test.cpp
